cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_143.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/a_utf8.c:72: error: DEAD_STORE
  The value written to &p (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/a_utf8.c:72:19: Write of unused value
70.           value |= (*p++ & 0x3f) << 12;
71.           value |= (*p++ & 0x3f) << 6;
72.           value |= *p++ & 0x3f;
                        ^
73.           if (value < 0x10000)
74.               return -4;
